# Galatea

./: .gitignore  LICENSE  README.md  docker-compose.yml  install.bat  install.sh  start.bat  start.sh
galatea_server/: .env.example  pyproject.toml
galatea_server/app/: main.py
galatea_server/app/agents/: __init__.py  graph.py  nodes.py  state.py
galatea_server/app/agents/tools/: __init__.py
galatea_server/app/api/: deps.py
galatea_server/app/api/v1/: api_router.py
galatea_server/app/callbacks/: __init__.py  stream_callback.py
galatea_server/app/characters/: registry.py
galatea_server/app/core/: config.py  constants.py  container.py  events.py  exception_handler.py  logger.py  startup.py  static_files.py
galatea_server/app/crud/: __init__.py  base.py  message.py  session.py
galatea_server/app/exceptions/: base.py  llm.py  session.py  tts.py
galatea_server/app/infrastructure/managers/: character_registry.py  session_manager.py  unity_connection.py  web_connection.py
galatea_server/app/infrastructure/processes/: tts_server.py  unity_process.py
galatea_server/app/memory/: __init__.py  base.py  checkpointer.py  chroma_store.py
galatea_server/app/models/: __init__.py  base.py  message.py  session.py
galatea_server/app/schemas/: character.py  common.py  session.py  tts.py  unity.py  unity_protocol.py  web_protocol.py
galatea_server/app/services/: agent_service.py  llm_service.py  session_service.py  tts_model_service.py  tts_service.py  unity_service.py
galatea_server/app/utils/: audio_utils.py  path_utils.py  prompts.py  text_buffer.py
(+43 files in other folders)
