[project]
name = "galatea-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "openai>=2.14.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # Vector Database
    "chromadb>=0.5.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]
